--- a/aws/iam/AuctionsTableIAM.yml
+++ b/aws/iam/AuctionsTableIAM.yml
@@ -2,5 +2,8 @@ AuctionsTableIAM:
   - Effect: Allow
     Action:
       - dynamodb:PutItem
+      - dynamodb:Scan
+      - dynamodb:GetItem
+      - dynamodb:UpdateItem
     Resource:
       - arn:aws:dynamodb:#{AWS::Region}:#{AWS::AccountId}:table/${self:custom.tableNames.auctions}
